# tklr-dgraham

./: .coverage  .envrc  .pre-commit-config.yaml  CHANGES.txt  DATABASE_CLEANUP_FIXED.md  FIXTURE_BUG_FIXED.md  FREEZE_BUG_COMPLETELY_FIXED.md  LICENSE  Makefile  README.html  README.md  TODO.md  _config.yml  agenda_test.py  bug_msg.md  bump.py  click_pager.py  details.md  fix_freeze_pattern.py  index.md  list_bucket_colors.py  load_config.py  make_demo.py  make_examples.py  make_items.py  mouse_short.avif  mouse_short_bkgrnd.avif  navigation_test.py  new_bump.py  notes.md  paginate_test.py  pyproject.toml  recent_changes.md  requirements.txt  setup.py  simulate_midnight.py  sync.py  tklr.py  tklr_add.py  tklr_logo.avif  (+1 more)
.githooks/: commit-msg  prepare-commit-msg
.github/workflows/: sync-recent-changes-discussion.yml  update-readme-timestamp.yml
_includes/: footer_custom.html
etm/: config.toml  etm.json  lorem.txt
examples/: batch.txt  config.toml
examples_dark/: .profile-weeks-steady.pstats  config.toml  current.txt
examples_light/: .profile-weeks.pstats  config.toml  current.txt
items/: config.toml  etm.txt
modules/: __version__.py  common.py  item.py  task.py
notes/: 0_claude.md  0_todo.md  25-09-27.md  25-10-14.md  25-10-19.md  PyPi.md  bins.md  busy.md  current.md  datetimes.md  finish.md  for_chat.md  goals.md  ideas.md  jobs.md  notes.md  overdue.md  sqlite.md  urgency_colors.md  user_input.md
screenshots/: GTD.monojson  GTD.txt
scripts/: check_readme_html.py  dedupe_completions.py  mp4_to_gif  sync_recent_changes_discussion.py
src/tklr/: __init__.py  (+21 more)
tests/: CHEATSHEET.md  FIXTURES_USAGE.md  README.md  __init__.py  conftest.py  test_agenda_tasks_due_prefix.py  test_cli_help.py  test_cli_rich_config.py  test_cli_urgency_report.py  test_completion_retention.py  test_datetimes.py  test_editor_sizing.py  test_example_working.py  test_inbox_sync.py  test_integration_database.py  test_item_alerts.py  test_item_dates.py  test_item_goals.py  test_item_parsing.py  test_last_next_format.py  test_log_retention.py  test_migration.py  test_modified_view.py  test_priority_config.py  test_query_engine.py  test_tasks_view.py  test_urgency_components.py  test_urgency_config_invalidation.py  test_urgency_design.py  test_urgency_due_component.py
tklr/: __main__.py  __version__.py  common.py  controller.py  item.py  model.py  shared.py  tklr_env.py  view.py  view_textual.css
utctest/: config.toml
(+8 files in other folders)
