[project]
name = "tklr"
version = "0.1.0"
description = "CLI task and job planning tool"
authors = [{ name = "Daniel Graham", email = "dnlgrhm@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
  "textual >=0.42.0",
  "python-dateutil >=2.8.2",
  "tzlocal >=5.3.1",
  "packaging >=25.0",
  "pydantic >=2.11.7",
  "jinja2 >=3.1.6"
]

[project.optional-dependencies]
dev = ["lorem"]

[project.scripts]
tklr = "tklr.__main__:main"

[build-system]
requires = ["uv-build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.uv-build]
packages = ["tklr"]
