[project]
name = "tklr"
version = "0.0.0b43"
description = "CLI task and job planning tool"
authors = [
    { name = "Daniel Graham", email = "dnlgrhm@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "textual >=0.42.0",
    "python-dateutil >=2.8.2",
    "tzlocal >=5.3.1",
    "packaging >=25.0",
    "pydantic >=2.11.7",
    "jinja2 >=3.1.6",
    "click>=8.2.1",
    "lorem>=0.1.1",
    "readchar>=4.2.1",
    "numpy>=2.3.3",
]

[project.optional-dependencies]
dev = [
    "lorem>=0.1.1",
    "tomli-w",
]

[project.scripts]
tklr = "tklr.cli.main:cli"

[build-system]
requires = [
    "uv-build>=0.7.19,<0.8.0",
]
build-backend = "uv_build"

[tool.uv-build]
packages = [
    "tklr",
]

[dependency-groups]
dev = [
    "ty>=0.0.1a14",
]
